// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataTabs > should flat items work 1`] = `
<div
  class="binc-data-tabs"
>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          总览
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        123456789
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          条件A
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        100000000
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          条件B
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        23000000
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item binc-data-tabs__item--active"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          条件C
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        456000
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          非常长的条件，测试溢出情况
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        789
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTabs > shoule nest items work 1`] = `
<div
  class="binc-data-tabs"
>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          总览
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        123456789
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          条件A
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        100000000
      </div>
    </div>
  </div>
  <div
    class="binc-data-tabs__group"
  >
    <div
      class="binc-data-tabs__item binc-data-tabs__item--active  binc-data-tabs__item--disabled"
      style="width: 120px;"
    >
      <div
        class="binc-data-tabs__item__header"
      >
        <div
          class="binc-data-tabs__item__title"
        >
          条件C
        </div>
        <div>
          <span
            aria-label="down"
            class="anticon anticon-down ant-dropdown-trigger binc-data-tabs__item__arrow"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="binc-data-tabs__item__value"
      >
        456000
      </div>
    </div>
  </div>
</div>
`;
